--- a/users/templates/users/user_posts.html
+++ b/users/templates/users/user_posts.html
@@ -1185,4 +1185,9 @@ function getSingleComment(id)
     function bookmarkPostOptions(id) {
         $("#options-bookmark-" + id).addClass('is-active');
     }
+
+    $(document).ready(function () {
+
+       morePost();
+    });
 </script>
