--- a/users/templates/users/user_register.html
+++ b/users/templates/users/user_register.html
@@ -147,11 +147,22 @@
 
         <div class="outer-panel">
             <div class="outer-panel-inner">
+
+                <center style="margin-top: 2em;"><a class="button button-tertiary is-flex is-justify-content-center my-4" style="width: 240px;" href="{% url "user:social:begin" "google-oauth2" %}">
+                                    <div class="is-align-self-center" style="width: 15px; height: 15px; display: inline-block;">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 326667 333333" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd"><path d="M326667 170370c0-13704-1112-23704-3518-34074H166667v61851h91851c-1851 15371-11851 38519-34074 54074l-311 2071 49476 38329 3428 342c31481-29074 49630-71852 49630-122593m0 0z" fill="#4285f4"/><path d="M166667 333333c44999 0 82776-14815 110370-40370l-52593-40742c-14074 9815-32963 16667-57777 16667-44074 0-81481-29073-94816-69258l-1954 166-51447 39815-673 1870c27407 54444 83704 91852 148890 91852z" fill="#34a853"/><path d="M71851 199630c-3518-10370-5555-21482-5555-32963 0-11482 2036-22593 5370-32963l-93-2209-52091-40455-1704 811C6482 114444 1 139814 1 166666s6482 52221 17777 74814l54074-41851m0 0z" fill="#fbbc04"/><path d="M166667 64444c31296 0 52406 13519 64444 24816l47037-45926C249260 16482 211666 1 166667 1 101481 1 45185 37408 17777 91852l53889 41853c13520-40185 50927-69260 95001-69260m0 0z" fill="#ea4335"/></svg>
+                                    </div>
+                                    <span class="ml-1">
+                                        &nbsp;Sign up with Google
+                                    </span>
+                </a></center>
+
                 <div class="process-title mt-3">
-                    <h2 id="step-title-1" class="step-title is-active">Tell us more about you.</h2>
-                    <h2 id="step-title-3" class="step-title">Upload a profile picture.</h2>
-                    <h2 id="step-title-5" class="step-title">Secure your account.</h2>
+                    <h2 id="step-title-1" class="step-title is-active mt-3">Tell us more about you.</h2>
+                    <h2 id="step-title-3" class="step-title mt-3">Upload a profile picture.</h2>
+                    <h2 id="step-title-5" class="step-title mt-3">Secure your account.</h2>
                 </div>
+
 
                 <div id="signup-panel-1" class="process-panel-wrap is-active is-narrow">
                     <div class="form-panel">
@@ -195,7 +206,7 @@
                                 <label for="profile_image" class="upload-button">
                                     <i data-feather="plus"></i>
                                 </label>
-                                <input name="profile_image" id="profile_image" onblur="unlockNextBtn(event, this, 1, 'stepbtn1')"  type="file" accept="image/*" alt="" style="display: none;">
+                                <input name="profile_image" id="profile_image" onblur="unlockNextBtn(event, this, 1, 'stepbtn1')"  type="file" accept="image/*" alt="" style="display: none;" required>
                             </div>
                             <div class="limitation">
                                 <small>Only images with a size lower than 3MB are allowed.</small>
