--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -15,54 +15,54 @@
                     <div class="column" style="background: #fff; margin: 1rem .75rem;">
 
 
-<!--                    <div class="profile-info">-->
-<!--                        <div class="left" style="margin-bottom: 5em;">-->
-<!--                            <div class="profile-avatar">-->
-<!--                                <img id="user-avatar-minimal" style="object-fit: cover;margin-top: 5em;" src="{{ profile_user.get_profile_img }}" data-demo-src="{{ profile_user.get_profile_img }}" alt="">-->
-<!--                                {% if request.user == profile_user %}-->
-<!--                                <button class="button is-solid secondary-button raised modal-trigger" style="margin-top: 4em;top: 100px;" data-modal="change-profile-pic-modal">-->
-<!--                                    <i data-feather="plus"></i>-->
-<!--                                </button>-->
-<!--                                {% endif %}-->
-<!--                            </div>-->
-<!--                            <div style="padding-top: 4em;">-->
-<!--                            <a class="button is-fullwidth modal-trigger" data-modal="change-profile-pic-modal" >-->
-<!--                                <i data-feather="camera"></i>-->
-<!--                                <span>Update Profile</span>-->
-<!--                            </a>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                    <div class="profile-info">
+                        <div class="left" style="margin-bottom: 5em;">
+                            <div class="profile-avatar">
+                                <img id="user-avatar-minimal" style="object-fit: cover;margin-top: 5em;" src="{{ profile_user.get_profile_img }}" data-demo-src="{{ profile_user.get_profile_img }}" alt="">
+                                {% if request.user == profile_user %}
+                                <button class="button is-solid secondary-button raised modal-trigger" style="margin-top: 4em;top: 100px;" data-modal="change-profile-pic-modal">
+                                    <i data-feather="plus"></i>
+                                </button>
+                                {% endif %}
+                            </div>
+                            <div style="padding-top: 4em;">
+                            <a class="button is-fullwidth modal-trigger" data-modal="change-profile-pic-modal" >
+                                <i data-feather="camera"></i>
+                                <span>Update Profile</span>
+                            </a>
+                            </div>
+                        </div>
 
-<!--                        <div class="right">-->
-<!--                            <div class="head" style="padding: 0em;margin-bottom: 0em;">-->
-<!--                                <h2>{{profile_user.get_full_name}}</h2>-->
-<!--                                <div class="actions">-->
-<!--                                    {% if profile_user == request.user %}-->
-<!--                                    <a class="button" style="border: none;padding: 0em;margin: 0em;"></a>-->
-<!--                                    {% elif request_already_sent %}-->
-<!--                                    <a class="button is-solid secondary-button raised">Request Sent</a>-->
-<!--                                    {% elif profile_user in request.user.get_user_connected_users %}-->
-<!--                                    <a class="button is-solid secondary-button raised">Send Message</a>-->
-<!--                                    {% else %}-->
-<!--                                    <form method="POST" onsubmit="sendFriendRequest(event);$(this).next().show();$(this).hide();">-->
-<!--                                        {% csrf_token %}-->
-<!--                                        <input type="hidden" name="id" value="{{profile_user.id}}">-->
-<!--                                        <button type="submit" class="button is-solid secondary-button raised">Send Request</button>-->
-<!--                                    </form>-->
-<!--                                    {% endif %}-->
+                        <div class="right">
+                            <div class="head" style="padding: 0em;margin-bottom: 0em;">
+                                <h2>{{profile_user.get_full_name}}</h2>
+                                <div class="actions">
+                                    {% if profile_user == request.user %}
+                                    <a class="button" style="border: none;padding: 0em;margin: 0em;"></a>
+                                    {% elif request_already_sent %}
+                                    <a class="button is-solid secondary-button raised">Request Sent</a>
+                                    {% elif profile_user in request.user.get_user_connected_users %}
+                                    <a class="button is-solid secondary-button raised">Send Message</a>
+                                    {% else %}
+                                    <form method="POST" onsubmit="sendFriendRequest(event);$(this).next().show();$(this).hide();">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="id" value="{{profile_user.id}}">
+                                        <button type="submit" class="button is-solid secondary-button raised">Send Request</button>
+                                    </form>
+                                    {% endif %}
 
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                            <div class="stats">-->
-<!--&lt;!&ndash;                                <span>174 posts</span>&ndash;&gt;-->
-<!--                                <span><i class="mdi mdi-account-group"></i> &nbsp;&nbsp;{{connected_users.count}} Friends</span>-->
-<!--                                <span><i class="mdi mdi-progress-check"></i> &nbsp;&nbsp; {{form.designation.value}}</span>-->
-<!--                            </div>-->
-<!--                            <div class="bio">-->
-<!--                                <p>{{form.bio.value}}</p>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                                </div>
+                            </div>
+                            <div class="stats">
+<!--                                <span>174 posts</span>-->
+                                <span><i class="mdi mdi-account-group"></i> &nbsp;&nbsp;{{connected_users.count}} Friends</span>
+                                <span><i class="mdi mdi-progress-check"></i> &nbsp;&nbsp; {{form.designation.value}}</span>
+                            </div>
+                            <div class="bio">
+                                <p>{{form.bio.value}}</p>
+                            </div>
+                        </div>
+                    </div>
 
 
 <!--                    </div>-->
@@ -153,7 +153,7 @@
                                 </a>
                                 {% elif request_already_sent %}
                                 <button class="button has-icon is-bold">&#10003;&nbsp;&nbsp; Request Sent</button>
-                                
+
                                 {% elif profile_user not in request.user.get_user_connected_users %}
                                 <form method="POST" onsubmit="sendFriendRequest(event);$(this).next().show();$(this).hide();">
                                     {% csrf_token %}
