--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -745,11 +745,11 @@
                                                     </form>
                                                 </div>
 
-                                                <div class="col-auto open-notebook" title="Open notebook">
-                                                    <a href="{% url 'user:redirect-notebook' %}" class="btn btn-sm btn-primary">
+                                                <div class="col-auto open-notebook" title="Open notebook" onclick="redirectNotebook()">
+                                                    <div class="btn btn-sm btn-primary">
                                                         <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg> -->
                                                         Open notebook
-                                                    </a>
+                                                    </div>
                                                 </div>
 
                                                 <div class="col-auto">
@@ -831,10 +831,10 @@
                                 <!-- Content -->
 {#                                {% include 'chat/chat-js.html' %}#}
                                 <!-- Mobile: more -->
-                                <div class="col-1 d-xl-none p-0 text-center" title="Open notebook">
-                                    <a href="{% url 'user:redirect-notebook' %}" class="btn btn-md p-1 open-notebook">
+                                <div class="col-1 d-xl-none p-0 text-center" title="Open notebook" onclick="redirectNotebook()">
+                                    <div class="btn btn-md p-1 open-notebook">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
-                                    </a>
+                                    </div>
                                 </div>
                                 <div class="col-2 d-xl-none text-end">
                                     <a href="#" class="icon icon-lg text-muted" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-more" aria-controls="offcanvas-more">
