--- a/users/templates/users/user_friends.html
+++ b/users/templates/users/user_friends.html
@@ -69,11 +69,11 @@
                                                 data-username="{{ user.connection_user.username }}" 
                                                 data-full_name="{{ user.connection_user.get_full_name }}" 
                                                 data-profile_link="{% url 'user:friend-profile' user.connection_user.id %}" 
-                                                data-profile_image_url="{{ user.connection_user.profile_image.url }}" 
+                                                data-profile_image_url="{{ user.connection_user.get_profile_img }}" 
                                                 data-pk="{{user.connection_user.id}}"
                                                 >
                                                 <div class="friend-small-card">
-                                                    <img src="{{ user.connection_user.profile_image.url }}" data-demo-src="{{ user.connection_user.profile_image.url }}" data-user-popover="9" alt="">
+                                                    <img src="{{ user.connection_user.get_profile_img }}" data-demo-src="{{ user.connection_user.get_profile_img }}" data-user-popover="9" alt="">
                                                     <div class="meta">
                                                         <span>{{ user.connection_user.username }}</span>
                                                         <span>{{ user.connection_user.get_full_name }}</span>
@@ -113,7 +113,6 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
-
                                                                 {% if request.user == connection_user.user %}
                                                                 <a href="{% url 'user:profile' %}" class="dropdown-item">
                                                                 {% else %}
@@ -137,86 +136,24 @@
 
                                         </div>{% if received_users %}<hr>{% endif %}
                                         <div class="columns friends-columns is-multiline" id="connected-users">
-
-                                            {% for user in connected_users %}
-                                            <!-- Friend -->
-                                            <div class="column is-6" data-del="true">
-                                                <div class="friend-small-card">
-                                                    <img src="{{ user.profile_image.url }}" data-demo-src="{{ user.profile_image.url }}" data-user-popover="9" alt="">
-                                                    <div class="meta">
-                                                        <span>{{ user.username }}</span>
-                                                        <span>{{ user.get_full_name }}</span>
-                                                    {#  Span contains friends count of that user  #}
-                                                    </div>
-                                                    <!-- Dropdown -->
-                                                    <div class="dropdown is-spaced is-accent is-right dropdown-trigger">
-                                                        <div>
-                                                            <div class="button">
-                                                                <i data-feather="more-vertical"></i>
-                                                            </div>
-                                                        </div>
-                                                        <div class="dropdown-menu" role="menu">
-                                                            <div class="dropdown-content">
-                                                                {% if request.user == user %}
-                                                                <a href="{% url 'user:profile' %}" class="dropdown-item">
-                                                                {% else %}
-                                                                <a href="{% url 'user:friend-profile' user.id %}" class="dropdown-item">
-                                                                {% endif %}
-                                                                    <div class="media">
-                                                                        <i data-feather="user"></i>
-                                                                        <div class="media-content">
-                                                                            <h3>View Profile</h3>
-                                                                            <small>Open this user profile.</small>
-                                                                        </div>
-                                                                    </div>
-                                                                </a>
-                                                                    {% if not user_friend %}
-                                                                <a class="dropdown-item" href="{% url 'chat:chat' %}">
-                                                                    <div class="media">
-                                                                        <i data-feather="message-square"></i>
-                                                                        <div class="media-content">
-                                                                            <h3>Message</h3>
-                                                                            <small>Send a message to this user.</small>
-                                                                        </div>
-                                                                    </div>
-                                                                </a>
-
-                                                                <hr class="dropdown-divider">
-                                                                <div onclick="this.querySelector(`button[type='submit']`).click()" class="dropdown-item w-100" style="cursor: pointer !important;">
-                                                                    <div class="media">
-                                                                        <i data-feather="delete"></i>
-                                                                        <div class="media-content">
-                                                                            <form method="POST" onsubmit="unfriendUser(event, false, false, false); this.closest(`div[data-del='true']`).remove();" action="">
-                                                                                <input type="hidden" name="pk" value="{{user.id}}">
-                                                                                {% csrf_token %}
-                                                                                <h3><button style="cursor: pointer; border: none; background-color: transparent; outline: none; box-sizing: none; font-weight: 500; color: inherit; padding:0px" type="submit">Unfriend</button></h3>
-                                                                                <small>Remove from friend list.</small>
-                                                                            </form>
-                                                                        </div>
-                                                                    </div>
-                                                                </div></a>
-                                                                    {% endif %}
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            {% empty %}
-
+                                            <!-- Connected users are shown here dynamically -->
                                             <!-- Placeholder Image -->
-                                            <div class="page-placeholder" id="page-placeholder">
+                                            <div class="page-placeholder page-placeholder-friends" id="page-placeholder-friends">
                                                 <div class="placeholder-content">
                                                     <img class="light-image" src="{% static 'social_assets/img/illustrations/placeholders/2.svg' %}" alt="" />
                                                     <img class="dark-image" src="{% static 'social_assets/img/illustrations/placeholders/2-dark.svg' %}" alt="" />
                                                     <h3>You don't have any friends yet.</h3>
                                                 </div>
                                             </div>
-                                            
-                                        {% endfor %}
-
                                         </div>
                                     </div>
+                                </div>
+                                 <!-- Load more posts -->
+                                <div id="load-more-btn-friend" class="load-more-btn-friend load-more-wrap narrow-top has-text-centered">
+                                    <a onclick="moreFriends()" id="load-more" class="load-more-button">Load More</a>
+                                </div>
+                                <div id="no-friend-tag" class=" load-more-wrap narrow-top has-text-centered" style="display: none;">
+                                    <p>No more Friends!...</p>
                                 </div>
                             </div>
 
@@ -351,39 +288,52 @@
     //     $("#options-friend-" + id).addClass('is-active');
     // }
 
-    // function moreFriends()
-    // {
-    //     console.log("More function called");
-    //     currentPosts = $('#connected-users #friend').length;
-    //     $.ajax({
-    //         async: true,
-    //         method: "GET",
-    //         url: "{% url 'user:load-more-friends' %}",
-    //         data: {
-    //             'profile_user_id': "{{ profile_user.id }}",
-    //             'current_friends': currentPosts,
-    //         },
-    //         success: function (response) {
-    //                 if (response.Status == false) {
-    //                     if(currentPosts === 0)
-    //                     {
-    //                        $('#load-more-btn').css('display', 'none');
-    //                         $(".page-placeholder-friends").show();
-    //                     }
-    //                     else{
-    //                     $('#load-more-btn-friend').css('display', 'none');
-    //                     $('#no-friend-tag').css('display', 'block');
-    //                     $(".page-placeholder-friends").hide();
-    //                     }
-    //                 } else
-    //                 {
-    //                     $('.page-placeholder-friends').hide();
-    //                     createFriend(response.friends);
-    //                 }
-    //         },
-    //         error: function (response) {
-    //             console.log(response);
-    //         },
-    //     });
-    // }
+    function moreFriends()
+    {
+        console.log("More function called");
+        currentPosts = document.querySelectorAll('#connected-users .friend-small-card').length;
+        $.ajax({
+            async: true,
+            method: "GET",
+            url: "{% url 'user:load-more-friends' %}",
+            data: {
+                'profile_user_id': "{{ profile_user.id }}",
+                'current_friends': currentPosts,
+            },
+            success: function (response) {
+                    if (response.Status == false) {
+                        if(currentPosts === 0)
+                        {
+                            $('#load-more-btn-friend').css('display', 'none');
+                            $(".page-placeholder-friends").show();
+                        }
+                        else{
+                            $('#load-more-btn-friend').css('display', 'none');
+                            $('#no-friend-tag').css('display', 'block');
+                            $(".page-placeholder-friends").hide();
+                        }
+                    } else {
+                        $('.page-placeholder-friends').hide();
+                        response.friends?.forEach((friend)=>{
+                            console.log(friend)
+                            const infoObj = {
+                                'id': `received_user_${friend.user_id}`,
+                                'username': friend.username,
+                                'full_name': friend.name,
+                                'profile_link': friend.profile_link,
+                                'profile_image_link': friend.profile_image_url,
+                                'pk': friend.user_id,
+                            }
+                            addFriendToSection(infoObj)
+                        })
+                    }
+            },
+            error: function (response) {
+                console.log(response);
+            },
+        });
+    }
+    setTimeout(() => {
+        moreFriends()
+    }, 1000);
 </script>
