--- a/chat/templates/chat/tab_content_friends.html
+++ b/chat/templates/chat/tab_content_friends.html
@@ -111,7 +111,7 @@
                                         <div id="user-list-left-panel">
                                             <!-- Remaining users and their initials are loaded dynamically here -->
                                         </div>
-                                        <div class="d-flex justify-content-center mt-5">
+                                        <div class="justify-content-center mt-5" style="display: flex;" id="loadRegion">
                                             <button class="btn btn-soft-primary" id="loadmore-users-btn" onclick="loadMoreRemainingUsers()">Load More</button>
                                             <button class="btn btn-soft-tertiary" id="nomore-users" style="display: none">No more users!</button>
                                         </div>
