--- a/chat/templates/chat/tab_content_friends.html
+++ b/chat/templates/chat/tab_content_friends.html
@@ -109,63 +109,11 @@
                                        
                                         <h4 class="mt-5 mb-4">Find Users</h4>
                                         <div id="user-list-left-panel">
-                                            {% for initial, account in remaining_dict.items %}
-                                            <div class="my-5 user_initials">
-                                                <small class="text-uppercase text-muted">{{ initial }}</small>
-                                            </div>
-                                            {% for user in account %}
-                                            <!-- Card -->
-                                            <div class="card border-0" id="remaining_{{user.id}}">
-                                                <div class="card-body">
-
-                                                    <div class="row align-items-center gx-5">
-                                                        <div class="col-auto">
-                                                            <a href="{% url 'user:friend-profile' user.id %}" class="avatar ">
-                                                                <img src="{{ user.get_profile_img }}" alt=""  style="object-fit: cover;" class="avatar-img">
-
-                                                            </a>
-                                                        </div>
-
-                                                        <a href="{% url 'user:friend-profile' user.id %}" style="color: inherit;" class="col">
-                                                            <h5 data-search="full_name">{{ user.get_full_name }}</h5>
-                                                            <p data-search="username">{{ user.username }}</p>
-                                                        </a>
-
-                                                        <div class="col-auto">
-                                                            <!-- Dropdown -->
-                                                            <div class="dropdown">
-                                                                <a class="icon text-muted" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
-                                                                </a>
-
-                                                                <ul class="dropdown-menu">
-                                                                    <li onclick="this.querySelector(`button[type='submit']`).click()">
-                                                                        <a class="dropdown-item" href="#">Send Request</a>
-                                                                        <form method="post" onsubmit="sendFriendRequest(event)" action="">
-                                                                            <input type="hidden" name="id" value="{{ user.id }}">
-                                                                            {% csrf_token %}
-                                                                            <button class="d-none" type="submit"></button>
-                                                                        </form>
-                                                                    </li>
-                                                                    {% comment %} <li><a class="dropdown-item" href="#">Edit contact</a> {% endcomment %}
-                                                                    </li>
-                                                                    <li>
-                                                                        <hr class="dropdown-divider">
-                                                                    </li>
-                                                                    <li>
-                                                                        <a class="dropdown-item text-danger" href="#">Block user</a>
-                                                                    </li>
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                            {% endfor %}
-                                            <!-- Card -->
-                                            {% endfor %}
+                                            <!-- Remaining users and their initials are loaded dynamically here -->
+                                        </div>
+                                        <div class="justify-content-center mt-5" style="display: flex;" id="loadRegion">
+                                            <button class="btn btn-soft-primary" id="loadmore-users-btn" onclick="loadMoreRemainingUsers()">Load More</button>
+                                            <button class="btn btn-soft-tertiary" id="nomore-users" style="display: none">No more users!</button>
                                         </div>
                                     </div>
                                 </div>
