--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -31,7 +31,7 @@
                 <div class="hero-body">
                     <div class="form-wrapper" style="max-width: 400px; min-width: unset !important;">
                         <center>
-                            <h2 style="font-size:xx-large;font-weight: bolder;   color: #3396d1;">Reset Password</h2>
+                            <h2 style="font-size:xx-large;font-weight: 600;   color: #3396d1;">Reset Password</h2>
                         </center><br>
 
                         <p>Enter your email address below, and we'll email instructions for
@@ -54,7 +54,7 @@
                             <div class="field">
                                 <div class="control">
                                     <button class="button is-solid primary-button raised is-rounded is-fullwidth"
-                                        type="submit">Send Email</button>
+                                        type="submit">Verify</button>
                                 </div>
                             </div>
                         </form>
